Fix sidebar being visible for a frame before page is fully loaded

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -151,6 +151,7 @@ nav.mainNav {
 		max-height: 60%;
 		max-width: 30%;
 		top: 10rem;
+		left: -1000px;
 
 		@media screen and (max-width: 850px) {
 			top: initial;
